--- a/css/main.css
+++ b/css/main.css
@@ -1422,8 +1422,9 @@ ul.slimmenu li > ul > li ul {
   .owl-pagination:before {
     content: "";
     position: absolute;
-    width: 210px;
-    height: 2px;
+    margin-top: 20px;
+    width: 0px;
+    height: 0px;
     background: #fff;
     top: 8px;
     margin: 0 auto;
